# CRYPTOGRAPHY_LABS

./: README.md
Lab01/: .aestool_nonces.json  CMakeLists.txt  Lab01.txt  check_version.cpp  ct_cbc.bin.json  ct_gcm.bin.json  ctr_run1.bin.json  decrypted_cbc.txt  demo_xts.bin.json  dummy.txt  ecb_passed.bin.json  encrypted_cbc.bin.json  gcm_secure.bin.json  large_ecb.txt  main.cpp  out_gcm.txt  output.MD  output1.MD  vectors.json
Lab03/: Lab03.txt  README.md  demo_dec.txt  key_meta.json  manual_dec.txt  priv.der  priv.pem  pub.der  pub.pem
Lab03/docs/: report.md
Lab03/src/: aes_gcm.cpp  aes_gcm.h  benchmark.cpp  benchmark.h  hybrid.cpp  hybrid.h  key_mgmt.cpp  key_mgmt.h  main.cpp  oaep_manual.cpp  oaep_manual.h  rsa_oaep.cpp  rsa_oaep.h  tests.cpp  tests.h  utils.cpp  utils.h
Lab04/: Lab04.txt  build.bat
Lab04/certs/: test_cert.pem  test_key.pem
Lab04/data/: program_a.cpp  program_b.cpp
Lab04/report/: analysis.md
Lab04/src/: benchmark.cpp  hashtool.cpp  length_extension.cpp  md5_collision.cpp  pki_parser.cpp
Lab05/: Lab05.txt  README.md  benchmark.cpp  benchmark.h  ecdsa_handler.cpp  ecdsa_handler.h  priv_p256.pem  priv_rsa.pem  pub_p256.pem  pub_rsa.pem  rsa_pss_handler.cpp  rsa_pss_handler.h  sigtool.cpp  test_runner.cpp  test_runner.h  utils.cpp  utils.h
Lab06/: CMakeLists.txt  Lab06.txt  README.md  build.bat  build_debug.bat  demo.ps1
Lab06/src/: bench.cpp  bench.h  cert.cpp  cert.h  decaps.cpp  decaps.h  encaps.cpp  encaps.h  keygen.cpp  keygen.h  main.cpp  sign.cpp  sign.h  tests.cpp  tests.h  utils.cpp  utils.h  verify.cpp  verify.h
